force-app/main/default/objects/Account/fields/Apology_Campaign_Active__c.field-meta.xml
<CustomField>
    <fullName>Apology_Campaign_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Apology Campaign automation is active for this Center or not.</description>
    <inlineHelpText>Indicates if the Apology Campaign automation is active for this Center or not.</inlineHelpText>
    <label>Apology Campaign Active</label>
    <type>Checkbox</type>
</CustomField>