force-app/main/default/objects/Account/fields/Apology_Campaign_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Apology_Campaign_Payment_Amount__c</fullName>
    <description>The amount paid for the apology campaign for this Center.</description>
    <inlineHelpText>The amount paid for the apology campaign for this Center.</inlineHelpText>
    <label>Apology Campaign Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>