force-app/main/default/objects/Account/fields/Apology_Campaign_Time_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Apology_Campaign_Time_Threshold__c</fullName>
    <description>(In minutes) Indicates the amount of minutes (threshold) where the apology campaign payments kick in for this center.</description>
    <inlineHelpText>(In minutes) Indicates the amount of minutes (threshold) where the apology campaign payments kick in for this center.</inlineHelpText>
    <label>Apology Campaign Time Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>