force-app/main/default/objects/Account/fields/Center_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Center_Timezone__c</fullName>
    <label>Center Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>