force-app/main/default/objects/Account/fields/CenterId__c.field-meta.xml
<CustomField>
    <fullName>CenterId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The unique external identifier for Centers</description>
    <externalId>true</externalId>
    <label>CenterId</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>