force-app/main/default/objects/Account/fields/Clinic_Schedule_Runway__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Schedule_Runway__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The number of months that should be available for scheduling in the future.</description>
    <inlineHelpText>The number of months that should be available for scheduling in the future.</inlineHelpText>
    <label>Clinic Schedule Runway</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>