force-app/main/default/objects/Account/fields/Clinic_Start_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Clinic_Start_Day_of_Week__c</fullName>
    <description>The first day of week typically Sunday or Monday</description>
    <inlineHelpText>What is considered the first day of the week?</inlineHelpText>
    <label>Clinic Start Day of Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>