force-app/main/default/objects/Account/fields/Default_Schedule_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Schedule_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default Schedule to be used when automatically creating Appointments in the future.</description>
    <inlineHelpText>The default Schedule to be used when automatically creating Appointments in the future.</inlineHelpText>
    <label>Default Schedule Model</label>
    <referenceTo>Schedule_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>