force-app/main/default/objects/Account/fields/E2E_Max__c.field-meta.xml
<CustomField>
    <fullName>E2E_Max__c</fullName>
    <description>The maximum E2E (End to End) time for a donation from checkin to collection complete. This most likely needs to be a calculated number post go live. ¯\_(ツ)_/¯</description>
    <inlineHelpText>Acceptable limit in minutes for a Donation</inlineHelpText>
    <label>E2E Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>