force-app/main/default/objects/Account/fields/First_Visit_Code__c.field-meta.xml
<CustomField>
    <fullName>First_Visit_Code__c</fullName>
    <externalId>true</externalId>
    <label>First Visit Code</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>