force-app/main/default/objects/Account/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>The coordinates of a Center&apos;s location.</description>
    <label>Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>