force-app/main/default/objects/Account/fields/Individual_Exception_Limit__c.field-meta.xml
<CustomField>
    <fullName>Individual_Exception_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The maximum amount that can be issued for each individual exception payment.</description>
    <label>Individual Exception Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>