force-app/main/default/objects/Account/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Serves to hide a Center during development before it is open for business from the mobile app, etc.</description>
    <inlineHelpText>Serves to hide a Center during development before it is open for business from the mobile app, etc.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>