force-app/main/default/objects/Account/fields/Max_Dollar_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Max_Dollar_Per_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The maximum amount of exception payments that can be issued on a per center basis. Measured in dollars.</description>
    <label>Max $ Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>