force-app/main/default/objects/Account/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Human friendly Center identifier</description>
    <label>Site #</label>
    <length>4</length>
    <type>Text</type>
</CustomField>