force-app/main/default/objects/Account/recordTypes/Center.recordType-meta.xml
<RecordType>
    <fullName>Center</fullName>
    <active>true</active>
    <description>Center for plasma collection services.</description>
    <label>Center</label>
   
    
</RecordType>