force-app/main/default/objects/Account/listViews/Donors.listView-meta.xml
<ListView>
    <fullName>Donors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__pc</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Donor</value>
    </filters>
    <label>Donors</label>
</ListView>